# kwin-lightlyshaders

./: .git-blame-ignore-revs  CMakeLists.txt
autotests/integration/: CMakeLists.txt  pointer_input.cpp  quick_tiling_test.cpp  xwayland_drag_and_drop_test.cpp
autotests/integration/helper/: CMakeLists.txt  drag.cpp  drop.cpp
src/: CMakeLists.txt  activation.cpp  composite.cpp  cursor.cpp  cursor.h  cursordelegate_opengl.cpp  cursordelegate_qpainter.cpp  decorationitem.cpp  decorationitem.h  deleted.cpp  deleted.h  effects.cpp  effects.h  input.cpp  input.h  input_event.h  inputmethod.cpp  inputmethod.h  inputpanelv1window.cpp  inputpanelv1window.h  item.cpp  item.h  keyboard_input.cpp  keyboard_input.h  layershellv1integration.cpp  layershellv1window.cpp  pointer_input.cpp  pointer_input.h  scene.cpp  scene.h  surfaceitem.cpp  surfaceitem.h  surfaceitem_internal.cpp  surfaceitem_internal.h  surfaceitem_wayland.cpp  surfaceitem_wayland.h  surfaceitem_x11.cpp  surfaceitem_x11.h  tablet_input.cpp  touch_input.cpp  (+11 more)
src/core/: outputbackend.cpp  outputbackend.h  renderlayer.cpp  renderlayer.h  renderloop.cpp  rendertarget.cpp  rendertarget.h
src/libkwineffects/: kwineffects.cpp  kwineffects.h  kwinglobals.h  kwingltexture.cpp  kwingltexture.h  kwinoffscreeneffect.h  kwinquickeffect.cpp
src/plugins/: CMakeLists.txt
src/scene/: itemrenderer_opengl.cpp  surfaceitem.cpp  surfaceitem.h
src/tiles/: quicktile.cpp  tile.cpp
src/utils/: CMakeLists.txt  edid.cpp  edid.h  regionf.cpp  regionf.h
src/wayland/: CMakeLists.txt  contrast_interface.cpp  contrast_interface.h  (+47 more)
(+67 files in other folders)
